Update example and options page for 'native_placeholder' option

--- a/public/options.html
+++ b/public/options.html
@@ -123,6 +123,13 @@
             <p>Only show the first (n) matching options in the results. This can be used to increase performance for selects with very many options.</p>
           </td>
         </tr>
+        <tr>
+          <td>native_placeholder</td>
+          <td>false</td>
+          <td>
+            <p>When set to <code class="language-javascript">true</code>, in multiple selects default text will be shown as placeholder and will be displayed even when there are already selected options.</p>
+          </td>
+        </tr>
       </table>
 
       <h2><a name="attributes" class="anchor" href="#attributes">Attributes</a></h2>
